<resources>
    <string name="app_name">RaceTraq</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_track">Map</string>
    <string name="connect_button_name">CONNECT</string>
    <string name="new_drive_button_name">New Drive</string>
    <string name="starting_saved_drives">0</string>
    <string name="saved_drives_title">Saved Drives:</string>
    <string name="initial_connection_status">No device connected</string>
    <string name="miles_driven_title">Miles Driven:</string>
    <string name="initial_miles_driven">0</string>
    <string name="top_speed_title">Top Speed:</string>
    <string name="init_top_speed">0</string>

    <string name="lap">Lap</string>

    <string name="title_activity_history">HistoryActivity</string>
    <string name="title_activity_display_drive">DisplayDriveActivity</string>

    <string name="title_activity_connect">ConnectActivity</string>
    <string name="connect">Connect</string>
    <string name="disconnected">disconnected</string>
    <string name="no_devices_found">No devices found.</string>
    <string name="connecting">Connecting...</string>
    <string name="device_connected">Device Connected!</string>
    <string name="disconnecting">Disconnecting...</string>
    <string name="title_activity_drive">DriveActivity</string>
    <string name="title_activity_sign_in">SignInActivity</string>
    <string name="sign_in_button_name">SIGN IN</string>
    <string name="register_button_name">REGISTER</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_password_invalid">Password must be at least 6 characters long</string>
    <string name="error_email_invalid">This email address is invalid</string>
    <string name="drive_name">Drive Name</string>
    <string name="no_data_service">No data service found.</string>
    <string name="not_connected">Please connect device before beginning a drive.</string>
    <string name="connect_timeout">Connection timeout</string>
    <string name="title_activity_new_drive">NewDriveActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dash">Dash</string>
    <string name="map">Map</string>
    <string name="plot">Plot</string>
    <string name="end_drive">End Drive</string>
    <string name="delete">Delete</string>
</resources>
